--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    <div>lhbb</div>
+    <script>
+        const myCity = 'Kostroma'
+
+        const weather = {
+        temperature: 3,
+        windSpeed: 18
+        } ;
+        
+        console.log(myCity);
+        console.log(weather);
+        
+        const result = (20 + 6) // Это выражение
+
+        console.log(result) // Это показывает результат выражения выше
+    </script>
 </body>
 </html>
