--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 
-    <script src="homework.js"></script>
+    <!-- <script src="homework.js"></script> -->
+    <script src="variables.js"></script>
     
 </body>
 </html>
