add script data_types.js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
 
     <!-- <script src="homework.js"></script> -->
-    <script src="variables.js"></script>
+    <!-- <script src="variables.js"></script> -->
+     <script src="data_types.js"></script>
     
 </body>
 </html>
