--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
     <!-- <script src="homework.js"></script> -->
     <!-- <script src="variables.js"></script> -->
-     <script src="data_types.js"></script>
+    <!-- <script src="data_types.js"></script> -->
+     <script src="operators.js"></script>
     
 </body>
 </html>
