--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <!-- <script src="homework.js"></script> -->
     <!-- <script src="variables.js"></script> -->
     <!-- <script src="data_types.js"></script> -->
-     <script src="operators.js"></script>
+    <!--<script src="operators.js"></script> -->
+    <script src="ifelse.js"></script>
     
 </body>
 </html>
