--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <!-- <script src="homework.js"></script> -->
     <!-- <script src="variables.js"></script> -->
     <!-- <script src="data_types.js"></script> -->
-    <!--<script src="operators.js"></script> -->
-    <script src="ifelse.js"></script>
+    <!-- <script src="operators.js"></script> -->
+    <!-- <script src="ifelse.js"></script> -->
+     <script src="cycle.js"></script>
+
     
 </body>
 </html>
