add data types2

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <!-- <script src="data_types.js"></script> -->
     <!-- <script src="operators.js"></script> -->
     <!-- <script src="ifelse.js"></script> -->
-     <script src="cycle.js"></script>
-
+    <!-- <script src="cycle.js"></script> -->
+    <script src="data_types2.js"></script>
     
 </body>
 </html>
