--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <!-- <script src="operators.js"></script> -->
     <!-- <script src="ifelse.js"></script> -->
     <!-- <script src="cycle.js"></script> -->
-    <script src="data_types2.js"></script>
+    <!-- <script src="data_types2.js"></script> -->
+    <script src="massive.js"></script>
     
 </body>
 </html>
